# SecretSantaBot

./: .dockerignore  .pre-commit-config.yaml  README.txt  compose.yaml  pyproject.toml  requirements.txt  santa.py
dev/docker/: .dockerignore  Dockerfile  compose.yaml  config.hcl  workflow_bot.sh  workflow_vault.sh
src/secret_santa_bot/: _vault.py  chains_of_primes.py  main.py  santa.py
src/secret_santa_bot/bot/: chains_of_primes.py  command_registration_mixin.py  santa.py  santa_rewrite.py
tests/: conftest.py
tests/secret_santa_bot/bot/: test_chains_of_primes.py
typings/hvac/: __init__.pyi  adapters.pyi  aws_utils.pyi  exceptions.pyi  utils.pyi
typings/hvac/api/: __init__.pyi  vault_api_base.pyi  vault_api_category.pyi
typings/hvac/api/auth_methods/: __init__.pyi  approle.pyi  aws.pyi  azure.pyi  cert.pyi  gcp.pyi  github.pyi  jwt.pyi  kubernetes.pyi  ldap.pyi  legacy_mfa.pyi  mfa.pyi  oidc.pyi  okta.pyi  radius.pyi  token.pyi  userpass.pyi
typings/hvac/api/secrets_engines/: __init__.pyi  active_directory.pyi  aws.pyi  azure.pyi  consul.pyi  database.pyi  gcp.pyi  identity.pyi  kv.pyi  kv_v1.pyi  kv_v2.pyi  pki.pyi  rabbitmq.pyi  ssh.pyi  transform.pyi  transit.pyi
typings/hvac/api/system_backend/: __init__.pyi  audit.pyi  auth.pyi  capabilities.pyi  health.pyi  init.pyi  key.pyi  leader.pyi  lease.pyi  mount.pyi  namespace.pyi  policy.pyi  raft.pyi  seal.pyi  system_backend_mixin.pyi  wrapping.pyi
typings/hvac/constants/: approle.pyi  aws.pyi  azure.pyi  client.pyi  gcp.pyi  identity.pyi  transit.pyi
typings/hvac/v1/: __init__.pyi
